--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.data.mongodb.uri=mongodb+srv://${env.login}:${env.password}@cluster0.uk5ff9v.mongodb.net/?retryWrites=true&w=majority
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
-spring.data.mongodb.database=search3
+spring.data.mongodb.database=search
 
 
 server.port=8080
